devops-aws-realtime-starter/k8s/chat-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat
  namespace: realtime
spec:
  replicas: 3
  selector:
    matchLabels:
      app: chat
  template:
    metadata:
      labels:
        app: chat
    spec:
      containers:
      - name: chat
        image: 662792376491.dkr.ecr.us-east-1.amazonaws.com/chat-app:latest
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /metrics
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /metrics
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 20
