devops-aws-realtime-starter/k8s/chat-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-svc
  namespace: realtime
spec:
  selector:
    app: chat
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
